@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.9 2003/04/09 15:52:29 jmmv Exp $
+# $NetBSD: Makefile,v 1.10 2003/06/02 19:55:16 abs Exp $
 #
 
 .include "../../mk/bsd.prefs.mk"
@@ -24,7 +24,7 @@ DISTNAME=	${PKGNAME_NOREV}
 .endif
 #
 PKGNAME=	setiathome-3.03
-PKGREVISION=	1
+PKGREVISION=	2
 CATEGORIES=	misc
 MASTER_SITES=	ftp://ftp.cdrom.com/pub/setiathome/ \
 		ftp://alien.ssl.berkeley.edu/pub/ \
